# RaytRazor

./: .gitignore  README.md
.github/workflows/: build-development.yml  build-latest.yml  build.yml  code-scan.yml
1. Projektplanung/: 02_Product_Backlog.xlsx  02_Sprint_Backlogs.xlsx  03_Sprint_Backlogs.xlsx  README.md
1. Projektplanung und Dokumentation/: 01_Product_Backlog.xlsx  02_Sprint_Backlogs.xlsx  03_RaytRazor_Lastenheft.docx  05_Quellen.md  README.md
1. Projektplanung und Dokumentation/1.1 Zeiterfassung/: Zeiterfassung_Bertscher_Florian.xlsx  Zeiterfassung_Jeckle_Lukas.xlsx  Zeiterfassung_Kasper_Christian.xlsx  Zeiterfassung_Musliu_Leon.xlsx  Zeiterfassung_Welsch_Dennis.xlsx
1. Projektplanung und Dokumentation/1.2 Erfahrungsbericht/: Erfahrungsbericht_Christian_Kasper.docx  Erfahrungsbericht_Dennis_Welsch.docx  Erfahrungsbericht_Florian_Bertscher.docx  Erfahrungsbericht_Leon_Musliu.docx  Erfahrungsbericht_Lukas_Jeckle.docx
1. Projektplanung und Dokumentation/1.3 Weekly Summups/2024-10-Oktober/: Meeting_2024-10-21.md
1. Projektplanung und Dokumentation/1.3 Weekly Summups/2024-11-November/: Meeting_2024-11-04.md  Meeting_2024-11-12.md  Meeting_2024-11-25.md
1. Projektplanung und Dokumentation/1.3 Weekly Summups/2024-12-Dezember/: Meeting_2024-12-02.md  Meeting_2024-12-16.md  Meeting_2024-12-23.md
1. Projektplanung/1.1 Zeiterfassung/: Zeiterfassung_Jeckle_Lukas.xlsx  Zeiterfassung_Kasper_Christian.xlsx  Zeiterfassung_Musliu_Leon.xlsx  Zeiterfassung_Welsch_Dennis.xlsx
1. Projektplanung/1.2 Erfahrungsbericht/: Erfahrungsbericht_Christian_Kasper.docx  Erfahrungsbericht_Dennis_Welsch.docx  Erfahrungsbericht_Florian_Bertscher.docx  Erfahrungsbericht_Leon_Musliu.docx  Erfahrungsbericht_Lukas_Jeckle.docx  Inhalt.txt
2. Dokumentation/: README.md
2. Dokumentation/2.1 Konzeptionelle Beschreibung/: Inhalt.txt  RaytRazor Lastenheft.docx
2. Dokumentation/2.2 Quellnachweise/: Inhalt.txt  Quellen.md
2. Dokumentation/2.3 Installations- und Bedienungsanleitung/: Inhalt.txt
2. Dokumentation/2.4 Architektur- und Designdokumentation/: Inhalt.txt
2. Präsentation/2.1 Präsentationsunterlagen/: 01_Team_RayForge_Visionspräsentation.pptx  04_Team_RayForge_Release_Technische-Präsentation.pptx
3. Präsentation/3.1 Präsentationsunterlagen/: 03_Team_RayForge_Release_Management-Präsentation.pptx  Inhalt.txt  Team_RayForge_Meilenstein_Präsentation.pptx  Team_RayForge_Release_Management-Präsentation.pptx
3. Präsentation/3.2 Poster/: Inhalt.txt
3. Software/3.1 Source-Code/RaytRazor/: main.cpp
4. Software/4.1 Quellen/: Inhalt.txt
4. Software/4.1 Quellen/RaytRazor/: CMakeLists.txt  RayT_Math.h  main.cpp
4. Software/4.1 Quellen/RaytRazor/.github/workflows/: code-scan.yml
4. Software/4.1 Quellen/RaytRazor/Components/: Base_Component.cpp  Base_Component.h  Entity.cpp  Entity.h
4. Software/4.1 Quellen/RaytRazor/Components/Basis/: Components.cpp  Components.h
4. Software/4.1 Quellen/RaytRazor/Components/Camera/: Camera_Component.cpp  Camera_Component.h
4. Software/4.1 Quellen/RaytRazor/Components/Entities/: RenderComponent.cpp  RenderComponent.h  Render_Component.cpp  Render_Component.h
4. Software/4.1 Quellen/RaytRazor/Components/Lighting/: LightComponent.cpp  LightComponent.h  Light_Component.cpp  Light_Component.h
4. Software/4.1 Quellen/RaytRazor/Components/Resources/: MaterialResource.cpp  MaterialResource.h  ObjectResource.cpp  ObjectResource.h
4. Software/4.1 Quellen/RaytRazor/Converter/: Converter.cpp  Converter.h
4. Software/4.1 Quellen/RaytRazor/Import/Importers/Material/: Material_Importer.cpp  Material_Importer.h
4. Software/4.1 Quellen/RaytRazor/Import/Importers/Object/: Object_Importer.cpp  Object_Importer.h
4. Software/4.1 Quellen/RaytRazor/Import/Resources/: Base_Resource.cpp  Base_Resource.h
4. Software/4.1 Quellen/RaytRazor/Import/Resources/Material/: Material_Resource.cpp  Material_Resource.h
4. Software/4.1 Quellen/RaytRazor/Import/Resources/Object/: Object_Resource.cpp  Object_Resource.h
4. Software/4.1 Quellen/RaytRazor/JsonParser/: SceneParser.cpp  SceneParser.h  scene.json
4. Software/4.1 Quellen/RaytRazor/Parsing/: Dummy_Json_New.json  JsonParser_DummyFile.json  Json_Parser.cpp  Json_Parser.h  SceneParser.h
4. Software/4.1 Quellen/RaytRazor/Raytracer/: RT_App.cpp  RT_App.h  RT_Camera.cpp  RT_Camera.h  RT_Color.cpp  RT_Color.h  RT_Image.cpp  RT_Image.h  RT_Light.cpp  RT_Light.h  RT_LightSource.cpp  RT_LightSource.h  RT_Matrix.h  RT_Object.cpp  RT_Object.h  RT_Object_Importer.h  RT_Plane.cpp  RT_Plane.h  RT_PointLight.cpp  RT_PointLight.h  RT_Ray.cpp  RT_Ray.h  RT_Scene.cpp  RT_Scene.h  RT_Sphere.cpp  RT_Sphere.h  RT_Triangle.cpp  RT_Triangle.h  RT_Vector.cpp  RT_Vector.h  RT_geometricTransform.cpp  RT_geometricTransform.h
4. Software/4.1 Quellen/RaytRazor/Shaders/: RaytRazor.fragmentshader  RaytRazor.vertexshader
4. Software/4.1 Quellen/RaytRazor/Shaders/Fragment/: FragmentShader.h  Fragment_Shader.cpp
4. Software/4.1 Quellen/RaytRazor/Shaders/Vertex/: VertexShader.h  Vertex_Shader.h
4. Software/4.1 Quellen/RaytRazor/UI/SceneManager/: Scene_Manager.cpp  Scene_Manager.h
4. Software/4.1 Quellen/RaytRazor/UI/Scenes/: Base_Scene.cpp  Base_Scene.h
4. Software/4.1 Quellen/RaytRazor/UI/Scenes/Main/: Main_Scene.cpp  Main_Scene.h
4. Software/4.1 Quellen/RaytRazor/UI/Scenes/Settings/: Settings_Scene.cpp  Settings_Scene.h
4. Software/4.1 Quellen/RaytRazor/UI/Widget/: ComponentAttributes_Widget.cpp  ComponentAttributes_Widget.h  MenuBar_Widget.cpp  MenuBar_Widget.h  TreeView_Widget.cpp  TreeView_Widget.h
4. Software/4.1 Quellen/RaytRazor/UI/utility/: Custom_Label.cpp  Custom_Label.h
4. Software/4.1 Quellen/RaytRazor/Utility/External_Libraries/boost/boost/uuid/: uuid.hpp
4. Software/4.1 Quellen/RaytRazor/Utility/Importers/: MTLLoader.h  Material.h  OBJLoader.h  Vertex.h
4. Software/4.1 Quellen/RaytRazor/Utility/Logger/: Logger.cpp  Logger.h
4. Software/4.1 Quellen/RaytRazor/resources/: settings.json
4. Software/4.2 Produkt/: Inhalt.txt  README.md
5. Modelle/: Inhalt.txt
6. Literatur/: Inhalt.txt
(+139 files in other folders)
